Add theme extension, move darkMode to context

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -10,6 +10,9 @@
       "selectTabSize": {
         "label": "Tab size",
         "options": ["2", "4"]
+      },
+      "theme": {
+        "label": "Pick a theme"
       }
     },
     "languageSwitcher": {
