Add option groups to theme select

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -12,7 +12,9 @@
         "options": ["2", "4"]
       },
       "theme": {
-        "label": "Pick a theme"
+        "label": "Pick a theme",
+        "dark": "Dark mode",
+        "light": "Light mode"
       }
     },
     "languageSwitcher": {
